--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Nadia Hossain"
 title_separator          : "-"
 name                     : &name "Nadia Hossain"
 description              : &description "personal description"
-url                      : https://nadia214.github.io/hnadia/# the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://nadia214.github.io/hnadia/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Nadia214/demo.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
