--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Nadia214/demo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "rsz_profil.png"
   name             : "Nadia Hossain"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
