--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,14 +14,14 @@ main:
   - title: "Education"
     url: /teaching/    
     
-  - #title: "Portfolio"
-    #url: /portfolio/
+  - title: "CV"
+    url: /portfolio/
         
   - #title: "Blog Posts"
     #url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - #title: "CV"
+    #url: /cv/
     
   - #title: "Guide"
     #url: /markdown/
