--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,13 +9,15 @@ main:
     url: /publications/
 
   - title: "Projects"
-    url: /talks/    
+    url: /talks/  
+
+    - title: "Education"
+    url: /portfolio/
 
   - title: "Education"
     url: /teaching/    
     
-  - title: "CV"
-    url: /portfolio/
+
         
   - #title: "Blog Posts"
     #url: /year-archive/
