--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     - title: "Education"
     url: /portfolio/
 
-  - title: "Education"
+  - title: "Eduion"
     url: /teaching/    
     
 
