--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,25 +5,23 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Research Experience"
+    - title: "Publications"
     url: /publications/
 
-  - title: "Projects"
-    url: /talks/  
+  - title: "Talks"
+    url: /talks/    
 
-  
-  - title: "Eduion"
+  - title: "Teaching"
     url: /teaching/    
     
-  - title: "Education"
+  - title: "Portfolio"
     url: /portfolio/
-
         
-  - #title: "Blog Posts"
-    #url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
-  - #title: "CV"
-    #url: /cv/
+  - title: "CV"
+    url: /cv/
     
-  - #title: "Guide"
-    #url: /markdown/
+  - title: "Guide"
+    url: /markdown/
