--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : linkedin.com/in/nadia-hossain214
+  linkedin         : nadia-hossain214
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
